--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p>You have 10 chances to guess the number correctly, the random selected number will be between 1 and 100 </p>
         <input type="text"  id="input" class="guessedNumber" placeholder="Guess">
         <br>
-        <input type="submit" id="sbt" value="Submit Guess" >
+        <input type="submit" class="submit "id="sbt" value="Submit Guess" >
     </form>
 
     <div class="result">
